[package]
name = "rustility"
version = "0.1.0"
edition = "2021"
authors = ["Evan Huff <ehuff007@gmail.com>"]
description = "A collection of utilities I often find myself using in Rust"
readme = "README.md"
repository = "https://github.com/ehuff700/Rustility"
license = "MIT OR Apache-2.0"
keywords = ["utils", "utility"]
categories = ["rust-patterns"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
tokio = {version = "1", features = ["macros", "rt"]}

[dependencies]

[features]
default = ["full"]
full = ["macros", "traits"]
macros = []
traits = []

